<resources>
    <string name="app_name">Budget</string>
    <string name="main">Main</string>
    <string name="members">Members</string>
    <string name="revenues">Incomes</string>
    <string name="divergence">Expenses</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="new_member">New member</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_shure">"Are you shure to delete "</string>
    <string name="from_db">from DB?</string>
    <string name="get_all_members_error">Something wrong with getting members from DB!</string>
    <string name="digit">⋮</string>
    <string name="yo">y.o.</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="this_field_is_empty">This field is empty!</string>
    <string name="new_member_success">New member succesfully saved on DB</string>
    <string name="from_gallery">From gallary</string>
    <string name="from_camera">From camera</string>
    <string name="access_denied">Access denied</string>
    <string name="edit">Edit</string>
    <string name="financial_info">Financial info</string>
    <string name="member_info">Member info</string>
    <string name="plus_money">+ money</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="money">Money</string>
    <string name="add_new_membership_free">Add new membership free:</string>
    <string name="info_successfully_saved_on_db">Information successfully saved</string>
    <string name="total">Total: </string>
    <string name="are_you_shure_to_delete_period">Are you sure to delete this period?</string>
    <string name="information_present_on_db">Information for the current month is already exist. Do you want to update this?</string>
    <string name="information_successfully_updated">Information successfully updated!</string>
    <string name="period_successfully_deleted">Period successfully delete!</string>
    <string name="update">Update</string>
    <string name="edit_member">Edit member</string>
    <string name="minus_money">- Money</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="add_new_income">Add new income</string>
    <string name="income_successfully_saved">Income successfully saved!</string>
    <string name="income_successfully_deleted">Income successfully deleted!</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="expense_successfully_saved">Expense successfully saved</string>
    <string name="are_you_sure_to_delete_this_income">Are you shure to delete this income?</string>
    <string name="are_you_sure_to_delete_this_expense">Are you sure to delete this expense?</string>
    <string name="expense_succesfully_saved">Expense successfully saved</string>
    <string name="member_successfully_delete">Member successfully delete!</string>
    <string name="sorry_cannot_call">Sorry, you can\'t make a call</string>
    <string name="members_quantity">Members quantity:</string>
    <string name="passed_the_money_for_the_current_month">Passed the money for the current month:</string>
    <string name="all_money_from_members">All money from members:</string>
    <string name="all_money_from_incomes">All money from incomes:</string>
    <string name="sum_of_expenses">Sum of expenses:</string>
    <string name="total_money_in_cash">Total money in cash:</string>
    <string name="archive">Archive</string>
    <string name="to_archive">To archive</string>
    <string name="to_actual_members">To actual members</string>
</resources>
