<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_expense_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:hint="@string/date"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="#aaa"
        app:layout_constraintLeft_toLeftOf="@id/tv_expense_date"
        app:layout_constraintTop_toBottomOf="@id/tv_expense_date" />

    <EditText
        android:id="@+id/et_expense_descr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_expense_date" />

    <EditText
        android:id="@+id/et_expense_money"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/money"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/et_expense_descr" />

    <Button
        android:id="@+id/save_expense_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/save"
        android:textColor="#FFFF4081"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_expense_money" />

    <Button
        android:id="@+id/cancel_new_expense_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:background="#fff"
        android:text="@string/cancel"
        android:textColor="#FFFF4081"
        app:layout_constraintRight_toLeftOf="@id/save_expense_btn"
        app:layout_constraintTop_toTopOf="@id/save_expense_btn" />
</android.support.constraint.ConstraintLayout>